Updated api definition and lambdas to match esource PoC
