# openapi3.yaml
@@ -1,58 +1,275 @@
-openapi: "3.0.1"
+openapi: 3.0.0
 info:
-  title: "ESOURCE API #3.1"
-  version: "0.1"
+  description: |
+    This is the Crown Commercial Service API definition.
+  version: "v0_3"
+  title: Crown Commercial Service
+  termsOfService: https://www.crowncommercial.gov.uk/
+  contact:
+    email: api@crowncommercial.gov.uk
+  license:
+    name: Open Government Licence 3.0
+    url: http://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/
+servers:
+# Added by API Auto Mocking Plugin
+  - description: CCS API Automock (for SBX)
+    url: https://virtserver.swaggerhub.com/timothygalvin-ccs/crown-commercial-service/v0_3
+tags:
+  - name: tender
+    description: An Invitation to Tender (ITT) as defined by CCS
+    externalDocs:
+      description: CCS Tendering Process
+      url: 'https://www.gov.uk/government/publications/become-a-crown-commercial-service-supplier/becoming-a-supplier-through-the-crown-commercial-service-what-you-need-to-know#tendering-for-opportunities--how-it-works'
 paths:
-  /users:
-    get:
+  /tenders:
+    post:
+      tags:
+        - tender
+        - itt
+      summary: Create an invitiation to tender i.e. a sourcing event
+      description: >-
+        Creates a CCS invitation to tender on the sourcing platform for a given
+        procurement case.
+      operationId: createTender
       responses:
-        200:
-          description: "200 response"
+        default:
+          description: successful operation
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Procurement'
+        description: Created sourcing object
+        required: true
+      x-amazon-apigateway-integration:
+        uri:
+          Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${CreateITTFunction.Arn}/invocations
+        passthroughBehavior: "when_no_match"
+        httpMethod: "POST"
+        type: "aws_proxy"
+      security:
+        - basicAuth: []
+  /tenders/status:
+    get:
+      tags:
+        - tender
+      summary: Get tenders by status
+      description: Returns list of tenders for a given status
+      operationId: getTenders
+      responses:
+        '200':
+          description: successful operation
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ArrayOfUser"
-      security:
-      - CustomAuthorizer: []
+                type: object
+                additionalProperties:
+                  type: integer
+                  format: int32
       x-amazon-apigateway-integration:
         uri:
-          Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${GetUsersFunction.Arn}/invocations
+          Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${GetTenderStatusFunction.Arn}/invocations
         passthroughBehavior: "when_no_match"
         httpMethod: "POST"
         type: "aws_proxy"
-  /users/{id}:
+      security:
+        - basicAuth: []
+  '/tenders/{id}':
     get:
+      tags:
+        - tender
+      summary: Find a tender by ID
+      description: >-
+        For valid response try integer IDs with value >= 1 and <= 10.\ \ Other
+        values will generated exceptions
+      operationId: getTenderById
       parameters:
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
+        - name: id
+          in: path
+          description: ID of the tender that needs to be fetched
+          required: true
+          schema:
+            type: integer
+            format: int64
+            minimum: 1
+            maximum: 10
       responses:
-        200:
-          description: "200 response"
-          content: {}
-      security:
-      - CustomAuthorizer: []
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Tender'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Tender'
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Tender not found
       x-amazon-apigateway-integration:
         uri:
-          Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${GetUserFunction.Arn}/invocations
+          Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${GetTenderByIdFunction.Arn}/invocations
         passthroughBehavior: "when_no_match"
         httpMethod: "POST"
         type: "aws_proxy"
+      security:
+        - basicAuth: []
+    delete:
+      tags:
+        - tender
+      summary: (Soft) Delete tender by ID
+      description: >-
+        For valid response try integer IDs with positive integer value.\ \
+        Negative or non-integer values will generate API errors
+      operationId: deleteTender
+      parameters:
+        - name: id
+          in: path
+          description: ID of the tender that needs to be deleted
+          required: true
+          schema:
+            type: integer
+            format: int64
+            minimum: 1
+      responses:
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Tender not found
+      x-amazon-apigateway-integration:
+        uri:
+          Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${DeleteTenderFunction.Arn}/invocations
+        passthroughBehavior: "when_no_match"
+        httpMethod: "POST"
+        type: "aws_proxy"
+      security:
+        - basicAuth: []
+  
 components:
   schemas:
-    User:
-      type: "object"
+    Tender:
+      type: object
       properties:
-        name:
-          type: "string"
-          description: "Name of the user"
         id:
-          type: "number"
-          description: "ID of the user"
-      description: "A generic user"
-    ArrayOfUser:
-      type: "array"
-      items:
-        $ref: "#/components/schemas/User"
+          type: integer
+          format: int64
+          example: 8
+        description:
+          type: string
+          example: "Tender - Laptops for Schools"
+        status:
+          type: integer
+          format: int32
+          description: Invitation to Tender Sourcing Event Status
+          example: "Invitation to Tender"
+      xml:
+        name: Tender
+    Procurement:
+      type: object
+      required:
+        - reference
+        - subject
+        - route
+        - commercialAgreement
+        - commercialAgreementLot
+        - ittPlannedStartDate
+        - ittPlannedEndDate
+      properties:
+        reference:
+          type: string
+          example: AB123456
+          description: The primary identifier of the procurement case
+        subject:
+          type: string
+          description: Title of the procurement case
+          example: Laptops for School
+        route:
+          type: string
+          description: Label indicating the process the procurement case must follow
+          example: Call Off (Competition)
+          enum:
+            - Call Off (Competition)
+            - Call Off (Direct Award)
+            - Open Market
+            - Single Tender Action
+        ittPlannedStartDate:
+          type: string
+          format: date
+          description: The date this procurement is planned to go out to tender
+          example: '2019-10-01'
+        ittPlannedEndDate:
+          type: string
+          format: date
+          description: The date the tender is planned or required to close
+          example: '2019-12-01'
+        organisation:
+          type: string
+          description: The organisation requesting the procurement
+          example: Bristol City Council
+        commercialAgreement:
+          type: string
+          description: Also known as a framework
+        commercialAgreementLot:
+          type: string
+          description: Also known as a framework lot
+        CommonAreaofSpendCategory:
+          $ref: '#/components/schemas/CommonAreaofSpendCategory'
+        tags:
+          type: array
+          xml:
+            name: tag
+            wrapped: true
+          items:
+            $ref: '#/components/schemas/Tag'
+      xml:
+        name: Procurement
+  
+    CommonAreaofSpendCategory:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+      xml:
+        name: CommonAreaofSpendCategory  
+    Category:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+      xml:
+        name: Category
+    Tag:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+      xml:
+        name: Tag
+    ApiResponse:
+      type: object
+      properties:
+        code:
+          type: integer
+          format: int32
+        type:
+          type: string
+        message:
+          type: string
+  securitySchemes:
+    basicAuth:
+        type: http
+        scheme: basic
+    api_key:
+      type: apiKey
+      name: api_key
+      in: header
